# BancoDeDadosTrabFinal

./: README.md  pyproject.toml
bancodedadostrabfinal/adapters/repository/postgresql/: repository.py
bancodedadostrabfinal/api/: __main__.py
bancodedadostrabfinal/composers/: pool_connect_composer.py
bancodedadostrabfinal/config/: config.py
bancodedadostrabfinal/config/sections/: __init__.py  database.py  section.py
bancodedadostrabfinal/entities/: entity.py
bancodedadostrabfinal/entities/interface/: interface.py
bancodedadostrabfinal/util/operator/: __init__.py  datetime.py  json.py  uuid.py
tests/: test_bancodedadostrabfinal.py
